blocks/icon-list/icon-list.css
div.icon-list > div > div > p:has(> span) {
    height: 100%;
    width: 100%;
}

div.icon-list-container:not(.blue-headings) h2, div.icon-list-container:not(.blue-headings) p {
    color: var(--color-white);
}

div.icon-list.plain h2, div.icon-list.plain p {
    color: var(--color-black);
}

div.icon-list.block {
    display: flex;
    flex-wrap: wrap;
}

div.icon-list > div {
    width: 100%;
    display: flex;
    flex-direction: row;
}

div.icon-list > div > div {
    height: 6rem;
    vertical-align: middle;
    margin-bottom: 1rem;
}

div.icon-list > div > div span {
    height: 100%;
    width: 100%;
}

div.icon-list > div > div:first-of-type {
    width: 33%;
}

div.icon-list > div > div:last-of-type {
    width: 66%;
    color: var(--color-white);
}

div.icon-list > div > div:nth-of-type(2) {
    border-left: 4px solid #ff5633;
    display: flex;
    align-items: center;
}

div.icon-list.plain > div > div:nth-of-type(2) {
    display: flex;
    align-items: start;
    border-left: unset;
    flex-direction: column;
}

div.icon-list:not(.plain) > div > div:nth-of-type(2) p {
    padding-left: 1rem;
}

div.section.fragment-container.icon-list-container > div.fragment-wrapper {
    margin-top: unset;
    margin-bottom: unset;
}

@media (min-width: 992px) {
    div.icon-list.plain.block {
        display: grid;
        grid-template-columns: 1fr 1fr;
    }

    div.icon-list > div {
        width: 33%;
        display: flex;
        flex-direction: row;
    }

    div.icon-list.plain > div {
        width: 100%;
        align-content: start;
    }
}

